Fix reaction avatars in dark mode
- Fix the box-shadow color to match the background.
- Use a darker background color in avatars when the image didn't load.

--- a/source/features/reactions-avatars.css
+++ b/source/features/reactions-avatars.css
@@ -17,6 +17,10 @@ button.reaction-summary-item { /* `button` excludes the "Add reaction" icon */
 	--background: #f2f8fa;
 }
 
+[data-color-mode='dark'] .reaction-summary-item.user-has-reacted {
+	--background: #111d2f;
+}
+
 .reaction-summary-item a {
 	display: inline-block;
 	width: 2em;
@@ -25,8 +29,12 @@ button.reaction-summary-item { /* `button` excludes the "Add reaction" icon */
 	margin-left: -0.5em;
 	vertical-align: middle;
 	background: #efefef; /* Placeholder before the images load */
-	box-shadow: 0 0 0 2px var(--background, #fff);
+	box-shadow: 0 0 0 2px var(--background, var(--color-bg-primary, #fff));
 	font-size: 10px; /* Base sizer */
+}
+
+[data-color-mode='dark'] .reaction-summary-item a {
+	background: #101010; /* Placeholder before the images load */
 }
 
 .reaction-summary-item a:first-of-type {
